--- a/templates/feedback.html
+++ b/templates/feedback.html
@@ -3,13 +3,23 @@
 <html>
 
 <head>
+
 <title>Send Feeback</title>
+
+	<meta charset="utf-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.4/css/bootstrap.min.css">
+
+	<link rel="stylesheet" href="../css/feedback.css">
 
 
 </head>
-<body>
+  <body>
 
-latlng = {{latlng}}
+
+ 	latlng = {{latlng}}
 
 </body>
 </html>
