--- a/templates/map_main.html
+++ b/templates/map_main.html
@@ -17,6 +17,8 @@
     <link rel="stylesheet" href="GeoSearch/css/l.geosearch.css" />
     <script src="GeoSearch/js/l.control.geosearch.js"></script>
     <script src="GeoSearch/js/l.geosearch.provider.google.js"></script>
+
+    <script src="jquery/jquery-1.11.2.js"></script>
   
     <script type="text/javascript" src="/js/config.js"></script>
     <script type="text/javascript" src="/js/mapscripts.js"></script>
