--- a/templates/map_main.html
+++ b/templates/map_main.html
@@ -14,6 +14,8 @@
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
     <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
 
+    <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
+
     <link rel="stylesheet" href="GeoSearch/css/l.geosearch.css" />
     <script src="GeoSearch/js/l.control.geosearch.js"></script>
     <script src="GeoSearch/js/l.geosearch.provider.google.js"></script>
@@ -21,7 +23,8 @@
     <script src="jquery/jquery-1.11.2.js"></script>
   
     <script type="text/javascript" src="/js/config.js"></script>
-    <script type="text/javascript" src="/js/mapscripts.js"></script>
+    <script type="text/javascript" src="/js/map_scripts.js"></script>
+    <script type="text/javascript" src="/js/map_init.js"></script>
 
     <style>
     html, body {width:100%; height:100%; padding: 0; margin: 0;}
