--- a/templates/map_main.html
+++ b/templates/map_main.html
@@ -22,7 +22,7 @@
 
     <script src="jquery/jquery-1.11.2.js"></script>
   
-    <script type="text/javascript" src="/js/config.js"></script>
+    <script type="text/javascript" src="/js/client_config.js"></script>
     <script type="text/javascript" src="/js/map_scripts.js"></script>
     <script type="text/javascript" src="/js/map_init.js"></script>
 
