leaflet-search implementation

--- a/templates/map_main.html
+++ b/templates/map_main.html
@@ -20,8 +20,8 @@
     <script src="GeoSearch/js/l.control.geosearch.js"></script>
     <script src="GeoSearch/js/l.geosearch.provider.google.js"></script>
 
-    <link rel="stylesheet" href="leaflet-search/leaflet-search.min.css" />
-    <script src="leaflet-search/leaflet-search.min.js"></script>
+    <link rel="stylesheet" href="leaflet-search/leaflet-search.src.css" />
+    <script src="leaflet-search/leaflet-search.src.js"></script>
 
     <script src="jquery/jquery-1.11.2.js"></script>
 
