--- a/templates/map_main.html
+++ b/templates/map_main.html
@@ -14,7 +14,7 @@
     <link rel="stylesheet" href="http://libs.cartocdn.com/cartodb.js/v3/themes/css/cartodb.css" />
     <script src="http://libs.cartocdn.com/cartodb.js/v3/cartodb.js"></script>
 
-    <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script>
+    <!-- // <script src="https://maps.googleapis.com/maps/api/js?sensor=false" type="text/javascript"></script> -->
 
     <link rel="stylesheet" href="GeoSearch/css/l.geosearch.css" />
     <script src="GeoSearch/js/l.control.geosearch.js"></script>
