--- a/templates/map_main.html
+++ b/templates/map_main.html
@@ -25,6 +25,7 @@
 
     <script src="jquery/jquery-1.11.2.js"></script>
 
+    <link rel="stylesheet" href="/css/mapstyles.css">
     <script type="text/javascript" src="/js/client_config.js"></script>
     <script type="text/javascript" src="/js/map_scripts.js"></script>
     <script type="text/javascript" src="/js/map_init.js"></script>
