--- a/templates/map_main.html
+++ b/templates/map_main.html
@@ -18,11 +18,15 @@
     <script src="GeoSearch/js/l.control.geosearch.js"></script>
     <script src="GeoSearch/js/l.geosearch.provider.google.js"></script>
 
+    <link rel="stylesheet" href="leaflet-sidebar/L.control.sidebar.css" />
+    <script src="leaflet-sidebar/L.control.sidebar.js"></script>
+
     <script src="jquery/jquery-1.11.2.js"></script>
 
     <link rel="stylesheet" href="/css/mapstyles.css">
     <script type="text/javascript" src="/js/client_config.js"></script>
     <script type="text/javascript" src="/js/map_scripts.js"></script>
+    <script type="text/javascript" src="/js/search_sidebar.js"></script>
     <script type="text/javascript" src="/js/map_init.js"></script>
 
 
