fixed bug in deployment static files
bug - when locally hosted, the search for files is case insensitive,
but on the GAE server, it is case sensitive!

--- a/templates/map_main.html
+++ b/templates/map_main.html
@@ -18,8 +18,8 @@
     <script src="GeoSearch/js/l.control.geosearch.js"></script>
     <script src="GeoSearch/js/l.geosearch.provider.google.js"></script>
 
-    <link rel="stylesheet" href="leaflet-sidebar/L.control.sidebar.css" />
-    <script src="leaflet-sidebar/L.control.sidebar.js"></script>
+    <link rel="stylesheet" href="leaflet-sidebar/L.Control.Sidebar.css" />
+    <script src="leaflet-sidebar/L.Control.Sidebar.js"></script>
 
     <script src="jquery/jquery-1.11.2.js"></script>
 
