--- a/GeoSearch/css/l.geosearch.css
+++ b/GeoSearch/css/l.geosearch.css
@@ -3,6 +3,7 @@
 	margin-left: auto;
 	margin-right: auto;
 	position: relative;
+	z-index: 0
 }
 .leaflet-control-geosearch, .leaflet-control-geosearch ul {
 	border-radius: 7px;
