added leaflet-navbar package

--- a/templates/map_main.html
+++ b/templates/map_main.html
@@ -21,6 +21,9 @@
     <link rel="stylesheet" href="leaflet-sidebar/L.Control.Sidebar.css" />
     <script src="leaflet-sidebar/L.Control.Sidebar.js"></script>
 
+    <link rel="stylesheet" href="leaflet-navbar/Leaflet.NavBar.css" />
+    <script src="leaflet-navbar/Leaflet.NavBar.js"></script>
+
     <script src="jquery/jquery-1.11.2.js"></script>
 
     <link rel="stylesheet" href="/css/mapstyles.css">
