--- a/css/mapstyles.css
+++ b/css/mapstyles.css
@@ -1,2 +1,3 @@
 html, body {width:100%; height:100%; padding: 0; margin: 0;}
-#cartodb-map { width: 100%; height:100%; background: white;}
+#cartodb-map { width: 100%; height:100%; background: white
+
